# CodeIndex

./: .gitignore  README.md  pyproject.toml  setup.bat
src/: config.py  server.py
src/graph/: activation.py
src/indexer/: asset_ref_builder.py  calibration.py  chunk_payload_store.py  chunker.py  chunker_cpp.py  chunker_css.py  chunker_go.py  chunker_html.py  chunker_js.py  chunker_json.py  chunker_lua.py  chunker_markdown.py  chunker_python.py  chunker_rust.py  chunker_ts.py  chunker_unity.py  chunker_yaml.py  dep_graph_builder.py  file_scanner.py  guid_resolver.py  hierarchy_builder.py  metadata.py  pipeline.py  sidecar_state.py  zenject_parser.py
src/models/: binding.py  chunk.py  unity_script_ref.py
src/tools/: assembly_graph.py  asset_references.py  class_deps.py  graph_analysis.py  index_management.py  project_info.py  references.py  search.py  type_hierarchy.py  unity_context.py  zenject.py
tests/: bench_find_references.py  test_backend_routing.py  test_chunker.py  test_chunker_cpp.py  test_chunker_css.py  test_chunker_go.py  test_chunker_lua.py  test_chunker_rust.py  test_chunker_ts.py  test_chunker_unity.py  test_get_file_chunks.py  test_integration_lua.py  test_integration_unity_indexing.py  test_new_tools.py  test_pipeline_improvements.py  test_server_progress.py  test_sidecar_state.py  test_zenject_parser.py
